Mon May 15 02:50:56 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/AMI_Buffering/client.cpp:
        * tests/Oneway_Buffering/client.cpp:

          Add the header for defining sleep for the platforms that don't
          happen to get it indirectly.

Sun May 14 13:32:33 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/AMI_Buffering/client.cpp:
        * tests/Oneway_Buffering/client.cpp:

          Minor change to insert a pause after killing the server but
          before killing the admin. This gives the server a moment to
          flush out any messages it wants to send to the admin. Without
          this pause, the test occasionally reports spurious comm failures
          that cause the scoreboard to count the test as failed.

        * tests/Connection_Timeout/client.cpp:

          Added more information to failure output.

Sat May 13 22:07:04 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/LF_CH_Event.h:
        * tao/LF_CH_Event.cpp:
        * tao/Transport_Connector.cpp:

          This is a fix for intermittent timeout problems when using
          asynch connections. Some tests, most notably the AMI_Buffering
          timeout test, randomly fail in that the client seems to just
          stop dead. I found that this failure occured when using
          nonblocking connects with at least 2 threads, one of which is
          invoking ORB::run while the other is trying to connect.

          The problem is that an asynch connection might cause the
          transport to cached in an unconnected state, relying on a
          subsequent connection request to enter the connection wait
          strategy and complete the connection. When using the leader
          follower wait strategy, a non-blocking connect will "poll" by
          setting the timeout value to be ACE_Time_Value::zero. A race
          could occur when the other thread actually handles the