@@ -1,3 +1,10 @@
+Mon May 15 09:59:56 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>
+
+        * tao/Unbounded_Octet_Sequence_T.h:
+
+          A potential solution to the namespace problem. This at least
+          works for the gcc/linux build.
+
 Mon May 15 02:50:56 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>
 
         * tests/AMI_Buffering/client.cpp:
